--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,17 @@
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
 
-.movie-container {
-  margin: 0 auto;
-  width: 80%;
-  border: 1px solid #333;
-  padding: 10px 0 30px 0;
-  border-radius: 5px;
-  margin-bottom : 50px;
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
 }
 
 .form-wrapper{
