--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,13 @@
   background: indianred;
   border-radius: 5px;
 }
+
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
