board detail page -  router connect

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .site-layout .site-layout-background {
-  background: #fff;
+  background: #001529;
 }
 
 .form-wrapper{
@@ -38,14 +38,4 @@
   border: none;
   background: indianred;
   border-radius: 5px;
-}
-
-#components-layout-demo-side .logo {
-  height: 32px;
-  margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.site-layout .site-layout-background {
-  background: #fff;
 }
