--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,8 @@
 .ck-editor__editable_inline {
   min-height: 570px;
 }
+
+.ant-menu-inline > .ant-menu-item {
+  height: 58px;
+  line-height: 58px;
+}
