--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,12 @@
   float: right;
   margin: 16px 0;
 }
+
+.ck-editor__editable_inline {
+  min-height: 570px;
+}
+
+.ant-menu-inline > .ant-menu-item {
+  height: 58px;
+  line-height: 58px;
+}
