모바일용 환경만들

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,6 +85,10 @@
   border: 0;
 } */
 
+.ant-picker-calendar-date {
+  height: 10vh !important;
+}
+
 .bogo{
     position: absolute;
     top: 1px;
