--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,25 +74,21 @@
   border-radius: .25em; 
 }
 
-/* .filebox input[type="file"] {  
-  position: absolute; 
-  width: 1px; 
-  height: 1px; 
-  padding: 0; 
-  margin: -1px; 
-  overflow: hidden;
-  clip:rect(0,0,0,0); 
-  border: 0;
-} */
-
 .bogo{
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    width: 24px;
-    height: 24px;
-    text-align: center;
-    padding: 0px;
+  position: absolute;
+  top: 2px;
+  right: 8px;
+  height: 24px;
+  text-align: center;
+  padding: 0px;
+}
+
+.bogo_register, .bogo_view, .bogo_update {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  padding: 0px;
 }
 
 .events {
@@ -114,3 +110,12 @@
 .notes-month section {
   font-size: 28px;
 }
+
+.reportView:focus {
+  outline: none;
+}
+
+.ant-picker-calendar-full .ant-picker-panel{
+  text-align: left;
+}
+
