--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -1,3 +1,4 @@
+/* classname 겹치지 않는 module용 css */
 .mainLogo{
   width: 120px; height: 30px;
   background: no-repeat url(../src/components/layout/cmworld-logo.png);
