--- a/client/src/components/modals/DailyReportView.css
+++ b/client/src/components/modals/DailyReportView.css
@@ -106,3 +106,43 @@
       opacity: 1;
     }
   }
+
+
+  table.type11 {
+    border-collapse: separate;
+    border-spacing: 1px;
+    /* text-align: center;{reportList} */
+    line-height: 1.5;
+    
+    width:100%
+  }
+  table.type11 th {
+    width: 155px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    color: #fff;
+    background: #48cead ;
+  }
+  table.type11 .title{
+    color: rgb(0, 0, 0);
+    background: #ffe867 ;
+  }
+  table.type11 .writer{
+    text-align: center;
+  }
+  table.type11 .today{
+    color: rgb(0, 0, 0);
+    background: #b0f6ff ;
+  }
+  table.type11 .tomorrow{
+    color: rgb(0, 0, 0);
+    background: #ffb24d ;
+  }
+  table.type11 td {
+    width: 155px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    background: #eee;
+  }
