로그인시 일일보고 데이터 바로 안불러오는 오류 해결

--- a/client/src/components/modals/DailyReportView.css
+++ b/client/src/components/modals/DailyReportView.css
@@ -126,18 +126,21 @@
   }
   table.type11 .title{
     color: rgb(0, 0, 0);
-    background: #ffe867 ;
+    background: #fdf0a4 ;
   }
   table.type11 .writer{
     text-align: center;
+    width:20%;
   }
   table.type11 .today{
     color: rgb(0, 0, 0);
-    background: #b0f6ff ;
+    background: #a8f5ff ;
+    width:40%;
   }
   table.type11 .tomorrow{
     color: rgb(0, 0, 0);
-    background: #ffb24d ;
+    background: #ffdaaa ;
+    width:40%;
   }
   table.type11 td {
     width: 155px;
