익일보고 추가

--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -19,3 +19,11 @@
   bottom: 1vh;
   right: 1vh;
 }
+
+.bogoTxtArea {
+  height: 14vh !important;
+}
+
+.bogoTxt {
+  font-size: 0.9em  !important;
+}
