--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -14,6 +14,13 @@
   margin-right: 0.25em;
 }
 
+.logoutM {
+  color : white;
+  font-size: 1.2em;
+  float: right;
+  margin-right: 0.8em;
+}
+
 .bogo{
   position: absolute;
   bottom: 1vh;
