--- a/client/src/App.css
+++ b/client/src/App.css
@@ -126,3 +126,12 @@
 #components-form-demo-normal-login .login-form-button {
   width: 100%;
 }
+
+.login-logo {
+  text-align: center;
+  margin-bottom : 10px;
+}
+
+.ant-form-item-label > label {
+  color: white !important;
+}
