--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -6,19 +6,19 @@
   margin: 16px 0 16px 0.8em;
 }
 /* header */
+.avtHeader {
+  bottom: 0.25em;
+}
+
 .btnHeader {
-  color : white;
-  font-size: 3em;
-  float: right;
-  margin-top: 0.25em;
-  margin-right: 0.25em;
+  margin: 0 0.25em;
 }
 
 .logoutM {
   color : white;
-  font-size: 1.4em;
+  font-size: 2em;
   float: right;
-  margin-right: 0.8em;
+  margin-right: 0.4em;
 }
 
 .bogo{
