--- a/client/src/App_mobile.css
+++ b/client/src/App_mobile.css
@@ -7,4 +7,8 @@
   .modalView > section > main {
     height: 60vh;
   }
+
+  .contnetDetail .ant-page-header-heading-title {
+    width: 55vw
+  }
 }
