--- a/client/src/components/modals/DailyReportView.css
+++ b/client/src/components/modals/DailyReportView.css
@@ -15,7 +15,7 @@
   }
   .modalView > section {
     width: 90%;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
@@ -111,10 +111,9 @@
   table.type11 {
     border-collapse: separate;
     border-spacing: 1px;
-    /* text-align: center;{reportList} */
     line-height: 1.5;
-    
-    width:100%
+    table-layout: fixed;
+    width:100%;
   }
   table.type11 th {
     padding: 10px;
@@ -123,24 +122,24 @@
     background: #808080 ;
   }
   table.type11 .title{
-    width: 15%;
+    width: 10%;
     color: rgb(0, 0, 0);
     background: #fdf0a4 ;
   }
   table.type11 .writer{
     text-align: center;
-    width:15%;
+    width:10%;
     
   }
   table.type11 .today{
     color: rgb(0, 0, 0);
     background: #c7f2f8 ;
-    width:42.5%;
+    width:45%;
   }
   table.type11 .tomorrow{
     color: rgb(0, 0, 0);
     background: #ffdaaa ;
-    width:42.5%;
+    width:45%;
   }
   table.type11 td {
     
