게시판 보기 기능 개선

--- a/client/src/App_mobile.css
+++ b/client/src/App_mobile.css
@@ -11,4 +11,13 @@
   .contnetDetail .ant-page-header-heading-title {
     width: 55vw
   }
+
+  .mainDetailContent table {
+    width: 85vw;
+    table-layout: fixed;
+  }
+
+  .mainDetailContent img {
+    max-width: 85vw;
+  }
 }
