--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,3 +165,13 @@
 .mainDetailContent th {
   background-color: lightgray;
 }
+
+.mainDetailContent blockquote {
+  border-left: 5px solid #ccc;
+  font-style: italic;
+  margin-left: 0;
+  margin-right: 0;
+  overflow: hidden;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+}
