--- a/client/src/App_mobile.css
+++ b/client/src/App_mobile.css
@@ -8,16 +8,17 @@
     height: 60vh;
   }
 
-  .contnetDetail .ant-page-header-heading-title {
-    width: 55vw
+  .mainDetailContent .ant-page-header-heading-title {
+    width: 65vw;
+    white-space: pre-line;
   }
 
   .mainDetailContent table {
-    width: 85vw;
+    width: 77vw;
     table-layout: fixed;
   }
 
   .mainDetailContent img {
-    max-width: 85vw;
+    max-width: 77vw;
   }
 }
