--- a/client/src/components/modals/DailyReport.css
+++ b/client/src/components/modals/DailyReport.css
@@ -1,4 +1,4 @@
-.modal {
+  .modal {
     display: none;
     position: fixed;
     top: 0;
@@ -16,6 +16,16 @@
   .modal > section {
     width: 90%;
     max-width: 700px;
+    margin: 0 auto;
+    border-radius: 0.3rem;
+    background-color: #fff;
+    /* 팝업이 열릴때 스르륵 열리는 효과 */
+    animation: modal-show 0.3s;
+    overflow: hidden;
+  }
+  .modal > .Card {
+    width: 500px;
+    /* max-width: 400px; */
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
