날짜 형식 변경, merge충돌 해결

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -191,11 +191,11 @@
 }
 
 /*timeline select*/
-p.hoverable {
+.hoverable {
   cursor: pointer;
   width: 100%;
 }
 
-p.hoverable:hover {
+.hoverable:hover {
   color : rgb(103, 103, 161);
 }
