모바일 화면 nav 개선

--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -7,11 +7,15 @@
 /* header */
 .avtHeader {
   bottom: 0.25em;
-  margin: 0 0.25em;
+  margin: 0 0.5em;
 }
 
 .btnHeader {
   margin: 0 0.25em;
+}
+
+.avtNav {
+  float: right;
 }
 
 .logoutM {
