날짜선택 inputbox reset 안되는 오류 해결, 처음날짜 끝날짜 선택 -> 날짜 하나만 선택하도록 변경

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,6 +141,10 @@
   text-align: center;
 }
 
+.ant-picker input {
+  text-align: center;
+}
+
 .ant-picker-date-panel .ant-picker-content th:nth-child(1), .ant-picker-date-panel .ant-picker-content th:nth-child(7) {
   color : red
 }
