--- a/client/src/App_mobile.css
+++ b/client/src/App_mobile.css
@@ -21,4 +21,11 @@
   .mainDetailContent img {
     max-width: 77vw;
   }
+
+  .newSosick {
+    table-layout: fixed;
+    width: 97vw;
+    color: black;
+    overflow: hidden;
+  }
 }
