--- a/client/src/App_mobile.module.css
+++ b/client/src/App_mobile.module.css
@@ -48,3 +48,11 @@
   position: absolute;
   right: 11px;
 }
+
+/* 새소실모달 */
+.soSickDiv {
+  background: white;
+  border-radius: 10px;
+  box-shadow: rgb(0 0 0 / 16%) 0px 1px 4px;
+  margin-bottom: 10px;
+}
